# remoteoutcome-python

./: .gitignore  README.md  pyproject.toml
data/: pred_real_Ycons.parquet
examples/: quickstart.py
scripts/: convert_rda.py
src/remoteoutcome/: __init__.py  bootstrap.py  data_constructors.py  estimator.py  helpers.py  prediction.py  result.py
tests/: test_full_pipeline.py  test_helpers.py  test_numerical_equivalence.py
